@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2009  Doom9 & al
+// Copyright (C) 2005-2012 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -111,7 +111,8 @@ namespace MeGUI.core.util
                         File.Delete(path);
                     }
                     catch (IOException) { }
-                    MessageBox.Show(e.Message);
+                    LogItem _oLog = MainForm.Instance.Log.Info("Error");
+                    _oLog.LogValue("XmlSerialize: " + path, e, ImageType.Error);
                 }
             }
         }
